# cross_eyeleo_app

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-release.yml  build.yml  release.yml
build-app/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cross_eyeleop_app  domain_policy_tests
build-app/.qt/: QtDeploySupport.cmake  deploy_cross_eyeleop_app_d5e4bf88fb
build-app/Testing/Temporary/: CTestCostData.txt
build-app/cross_eyeleop_app_autogen/: deps  mocs_compilation.cpp
build-app/cross_eyeleop_app_autogen/733YWV5LVE/: moc_MainViewModel.cpp  moc_MainViewModel.cpp.d
build-app/cross_eyeleop_app_autogen/JNGRBOHULX/: moc_QtHeartbeat.cpp  moc_QtHeartbeat.cpp.d
build-app/cross_eyeleop_app_autogen/TFB47JNZ6U/: moc_MainWindow.cpp  moc_MainWindow.cpp.d
build-app/domain_policy_tests_autogen/: deps  moc_predefs.h
build-test/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  domain_policy_tests
build-test/Testing/Temporary/: CTestCostData.txt
installer/: linux-launcher.sh
installer/config/: config.xml  installcontrol.qs
resources/: app.qrc
src/: activitymonitor.cpp  activitymonitor.h  app.cpp  app.h  appversion.h  main.cpp  settingsmanager.cpp  settingsmanager.h  statemachine.cpp  statemachine.h  taskscheduler.cpp  taskscheduler.h  trayicon.cpp  trayicon.h
src/application/interfaces/: ISettingsRepository.h
src/application/models/: AppConfig.h  SessionSnapshot.h
src/application/services/: SessionCoordinator.cpp  SessionCoordinator.h
src/domain/entities/: BreakSession.h  BreakType.h
src/domain/policies/: BreakSchedulePolicy.cpp  BreakSchedulePolicy.h
src/domain/services/: SessionStateMachine.cpp  SessionStateMachine.h
src/exercises/: exercisemanager.cpp  exercisemanager.h
src/infrastructure/settings/: QSettingsRepository.cpp  QSettingsRepository.h
src/infrastructure/timing/: QtHeartbeat.cpp  QtHeartbeat.h
src/platform/: mac_utils.h  mac_utils.mm
src/presentation/viewmodels/: MainViewModel.cpp  MainViewModel.h
src/presentation/windows/: MainWindow.cpp  MainWindow.h
src/windows/: beforepausewindow.cpp  beforepausewindow.h  bigpausewindow.cpp  bigpausewindow.h  exerciseanimationwidget.cpp  exerciseanimationwidget.h  minipausewindow.cpp  minipausewindow.h  notificationwindow.cpp  notificationwindow.h  pausewindowbase.hpp  settingswindow.cpp  settingswindow.h
tests/: CMakeLists.txt  test_settingsmanager.cpp  test_statemachine.cpp
tests/domain/: SessionCoordinatorTests.cpp
